--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>Сомойлов и ко</title>
         <link rel="stylesheet" href="style.css"/>
+        <meta name="google-site-verification" content="uLPV7Zm4mkdWsfVH7bMEOuCy6IOoTA_7JN1Dduf-MKU" />
     </head>
     <body>
         <header>
